# Turboquant

./: .gitignore  CMakeLists.txt  README.md  SIMD-AVX.md
include/: codebook.h  config.h  errors.h  hash_map.h  lin_alg.h  math_ops.h  quantization_prim.h  turboquant.h
simd/: README.md  SIMD-AVX.md  SIMD.md
simd-multi/: .gitignore  CMakeLists.txt  README.md  SIMD.md
simd-multi/include/: config.h  lin_alg.h  turboquant.h
simd-multi/src/: initialize_context.c  lin_alg.c  turboquant.c
simd/include/: turboquant.h
simd/src/: codebook.c  save_turboquant.c
simt/: README.md  SIMT.md
simt-multi/: README.md
simt-multi/include/: turboquant.h
simt-multi/src/: codebook.c  initialize_context.c  turboquant.cu
simt/include/: codebook.h  config.h  errors.h  turboquant.h
simt/src/: hash_map.c  turboquant.cu
src/: codebook.c  hash_map.c  initialize_context.c  lin_alg.c  lin_alg.cu  math_ops.c  turboquant.c  turboquant.cu
tests/: RUN_TESTS.sh
tests/suits/: test_codebook.c  test_hash_map.c  test_lin_alg.cu  test_turboquant  test_turboquant.c  test_turboquant.cu  test_turboquant_cpu.c  test_turboquant_mt.c
